HW3/javali_tests/othertests/A4_team/newObject.javali
class A {
    int k;
    int foo() {
        return 0;
    }
}

class B extends A{
    int j;
    int boo(int i) {
        return i;
    }
    int foo() {
        return 1;
    }
}

class C extends B {
    int h;
    int boo(int i) {return i+1;}
}

class Main {
    int k;
    void main() {
        A a;
        B b;
        A[] arr;
        arr = new A[1];
        arr[0] = new A();
        arr[0].k = 5;
        write(arr[0].k);
        k = 5;
        a = new A();
        write(a.foo());
        writeln();
        b = new B();
        write(b.foo());
        writeln();
        write(k);
        writeln();
        write(b.boo(k));
    }
}

